--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="yuto@todo.todo">yuto</maintainer>
+  <maintainer email="takeyabuyaketa@todo.todo">takeyabuyaketa</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
